--- a/t0022Next/my-app/package.json
+++ b/t0022Next/my-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev-https": "node server.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,6 +15,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "https": "^1.0.0",
     "js-cookie": "^3.0.5",
     "next": "13.5.2",
     "react": "18.2.0",
