--- a/t0022Next/my-app/package.json
+++ b/t0022Next/my-app/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "https": "^1.0.0",
@@ -22,5 +23,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.4"
   }
 }
